<resources>
    <string name="app_name">MyFit</string>
    <string name="placeholder">Example Text</string>

    <!--    Nav Bar Menu Titles-->
    <string name="home">Home</string>
    <string name="exercises">Exercises</string>
    <string name="workouts">Workouts</string>
    <string name="progress">Progress</string>
    <string name="settings">Settings</string>

    <!--    Reusable text-->
    <string name="duration">Duration: </string>
    <string name="sets">Sets: </string>
    <string name="reps">Reps: </string>
    <string name="date">Date: </string>
    <string name="calories">Calories burned: </string>
    <string name="steps">Steps: </string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="menu">Menu</string>


    <!--    Entity Specific Fields-->
    <string name="my_exercises">My Exercises</string>
    <string name="exercise_name">Exercise Name: </string>
    <string name="exercise_type">Exercise Type: </string>
    <string name="add_exercise">Add Exercise</string>

    <string name="my_workouts">My Workouts</string>
    <string name="workout_name">Workout Name: </string>
    <string name="workout_desc">Workout Description: </string>
    <string name="add_workout">Add Workout</string>
    <string name="start_workout">Start Workout</string>
    <string name="workout_exercises">Exercises: </string>
    <string name="complete_workout">Complete Workout</string>

    <string name="my_logs">My Progress Logs</string>
    <string name="log_notes">Notes: </string>
    <string name="add_log">Add Progress Log</string>


    <!--    Home Screen Text-->
    <string name="home_greeting">Welcome Back, lets get MyFit</string>
    <string name="user_profile">User Profile </string>
    <string name="quick_actions">Quick Actions</string>
    <string name="steps_hint">Enter Steps</string>
    <string name="calories_hint">Enter KJ (Kilojoules) </string>
    <string name="calculate">Calculate</string>
    <string name="convert">Convert</string>
    <string name="calorie_placeholder">0 kcal</string>

    <string name="workout_detail">Workout Detail</string>

<!--    Settings text-->
    <string name="name_hint">Enter name</string>
    <string name="weight_hint">Enter Current Weight (kg)</string>
    <string name="goal_weight_hint">Enter goal Weight (kg) </string>
    <string name="age_hint">Enter Age</string>

<!--    Timer-->
    <string name="open_timer">Open Timer</string>
    <string name="timer">Timer</string>
    <string name="timer_text">00:00</string>
    <string name="start_timer">Start</string>
    <string name="pause_timer">Pause</string>
    <string name="reset_timer">Reset</string>

</resources>