<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/exerciseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/exerciseType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exerciseName"/>

    <TextView
        android:id="@+id/exerciseSets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sets"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exerciseType"/>

    <TextView
        android:id="@+id/exerciseReps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reps"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exerciseSets"/>


</androidx.constraintlayout.widget.ConstraintLayout>