<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/fragment_padding"
    android:layout_margin="@dimen/card_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/workoutName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workout_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/logDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/workoutName"/>

    <TextView
        android:id="@+id/logDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logDate"/>

    <TextView
        android:id="@+id/logNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_notes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logDuration"/>



</androidx.constraintlayout.widget.ConstraintLayout>