<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/cardBackground"
    android:padding="@dimen/fragment_padding">

    <TextView
        android:id="@+id/addWorkoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_workout"
        android:textSize="@dimen/text_size_h2"
        android:textColor="@color/yellowAccent"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/workoutNameInput"
        android:hint="@string/workout_name"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/addWorkoutTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/workoutDescInput"
        android:hint="@string/workout_desc"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/workoutNameInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/workoutDurationInput"
        android:hint="@string/duration"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/workoutDescInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@id/workoutDurationInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/saveBtn"/>

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/workoutDurationInput"
        app:layout_constraintStart_toEndOf="@id/cancelBtn"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>