<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/cardBackground"
    android:padding="@dimen/fragment_padding">

    <TextView
        android:id="@+id/addExerciseTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_exercise"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_h2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Spinner
        android:id="@+id/workoutSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/addExerciseTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:spinnerMode="dropdown"/>

    <EditText
        android:id="@+id/exerciseNameInput"
        android:hint="@string/exercise_name"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/workoutSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/exerciseTypeInput"
        android:hint="@string/exercise_type"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/exerciseNameInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/exerciseRepsInput"
        android:hint="@string/reps"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/exerciseTypeInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/exerciseSetsInput"
        android:hint="@string/sets"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/exerciseRepsInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@id/exerciseSetsInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/saveBtn"/>

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/exerciseSetsInput"
        app:layout_constraintStart_toEndOf="@id/cancelBtn"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>