<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.timer.TimerFragment"
    android:padding="@dimen/fragment_padding">


    <TextView
        android:id="@+id/timerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/yellowAccent"
        android:textSize="@dimen/text_size_h1"
        android:padding="@dimen/fragment_padding"/>

    <ImageView
        android:id="@+id/timerIcon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/timer_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timerTitle"
        />

    <TextView
        android:id="@+id/timerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timerIcon"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_h1"
        android:padding="@dimen/fragment_padding"/>

    <Button
        android:id="@+id/pauseBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause_timer"
        app:layout_constraintTop_toBottomOf="@id/timerText"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/startBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_timer"
        app:layout_constraintTop_toBottomOf="@id/timerText"
        app:layout_constraintStart_toEndOf="@id/pauseBtn"
        app:layout_constraintEnd_toStartOf="@id/resetBtn"

        />


    <Button
        android:id="@+id/resetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_timer"
        app:layout_constraintTop_toBottomOf="@id/timerText"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintTop_toBottomOf="@id/resetBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        />

</androidx.constraintlayout.widget.ConstraintLayout>