<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/cardBackground"
    tools:context=".ui.progress.AddProgressLogDialogueFragment"
    android:padding="@dimen/fragment_padding">

    <TextView
        android:id="@+id/addLogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_log"
        android:textSize="@dimen/text_size_h2"
        android:textStyle="bold"
        android:textColor="@color/yellowAccent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />



    <EditText
        android:id="@+id/workoutDurationInput"
        android:hint="@string/duration"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/addLogTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/logNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/log_notes"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/workoutDurationInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/logNotes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>