<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/fragment_padding">

        <!-- Greeting -->
        <TextView
            android:id="@+id/welcomeGreeting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/home_greeting"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_h1"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <!-- Today’s workout -->
        <TextView
            android:id="@+id/textTodayWorkout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/today_workout"
            android:textColor="@color/lightGreyText"
            android:textSize="@dimen/text_size_h2"
            android:layout_marginTop="@dimen/fragment_padding"
            app:layout_constraintTop_toBottomOf="@id/welcomeGreeting"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Stats Card -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardQuickStats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_padding"
            app:cardCornerRadius="@dimen/card_corner_radius"
            android:backgroundTint="@color/cardBackground"
            app:layout_constraintTop_toBottomOf="@id/textTodayWorkout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:elevation="4dp"
            android:padding="@dimen/fragment_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/textCalories"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/calories"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_h3"/>

                <TextView
                    android:id="@+id/textSteps"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/steps"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_h3"/>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- Quick Actions -->
        <LinearLayout
            android:id="@+id/quickActionsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/fragment_padding"
            app:layout_constraintTop_toBottomOf="@id/cardQuickStats">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGoToWorkouts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/workouts"
                android:textSize="@dimen/text_size_button"
                android:textAlignment="center"
                android:layout_margin="8dp"
                app:icon="@drawable/exercise_icon"
                app:iconTint="@color/yellowAccent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGoToProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progress"
                android:textSize="@dimen/text_size_button"
                android:textAlignment="center"
                android:layout_margin="8dp"
                app:icon="@drawable/progress_icon"
                app:iconTint="@color/yellowAccent"/>
        </LinearLayout>





    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>